# Scaling-XLM-RoBERTa-for-ABSA

./: .flake8  .gitignore  Makefile  README.md  extract_absa_embeddings_from_llama.py  finetune_absa.py  finetune_absa_bert_like.py  finetune_absa_llama.py  finetune_absa_llama_like.py  pyproject.toml  requirements.txt  sparta  train_on_llama_embeddings.py  use_absa.py  use_absa_bert_like.py
accelerate_configs/: deberta.yaml  electra.yaml  ernie.yaml  llama.yaml  roberta.yaml  roberta_base_large.yaml  roberta_xl.yaml  xlm_roberta_xxl.yaml
readme/: 0_model_sizes.md  1_using_models.md  2_finetuning_absa_models.md
src/sparta/absa/: aspects.py  embeddings.py  metrics.py  models.py  tokenize.py
